commit new feature

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>This is my new feature</h1>
+    </div>
 </body>
 </html>
