--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>hello duniya</h1>
+    <h1>github pages pe deploy kiya aaj</h1>
 </body>
 </html>
